<resources>
    <string name="app_name">NUMAD23Sp_ZhehaoXu</string>
    <string name="about_me">About Me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="pressed_none">Pressed: -</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="a">A</string>
    <string name="f">F</string>
    <string name="email_xu_zheh_northeastern_edu">Email: xu.zheh@northeastern.edu</string>
    <string name="name_zhehao_xu">Name: Zhehao Xu</string>
    <string name="link_collector">Link Collector</string>
    <string name="add_links">add_links</string>
    <string name="input_url">Input URL</string>
    <string name="input_name">Input Name</string>
    <string name="add">ADD</string>
    <string name="go_back">Go Back</string>
    <string name="prime_drective">Prime Drective</string>
    <string name="find_primes">Find Primes</string>
    <string name="textview">TextView</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="location_service_not_allowed">Location Service Not Allowed!</string>
    <string name="reset">reset</string>
</resources>